# Amari

./: .gitignore  .lsp.json  API_NAMING_CONVENTION.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DEPLOYMENT_STRATEGY.md  DOCUMENTATION.md  DUAL_GPU_INTEGRATION_PLAN.md  ERROR_HANDLING_DESIGN.md  FORMAL_VERIFICATION.md  GPU_COVERAGE_ROADMAP_v0.9.5.md  GPU_VERIFICATION_CONTRACTS.rs  INTEGRATION_STATUS.md  MATHEMATICAL_RIGOR.md  MIGRATION_v0.12.0.md  NPM_PUBLISHING_ROADMAP.md  PHANTOM_TYPES_METHODOLOGY.md  PHASE4_INTEGRATION_FRAMEWORK.rs  PROJECT_CONTEXT.md  PUBLISHING.md  README.md  RELEASE.md  RELEASE_PROCESS_v0.9.8.md  RESUME_12-19-25.md  ROADMAP_v0.9.5.md  TROPICAL_GPU_INTEGRATION_PLAN.md  VERIFICATION_PROTOTYPE.rs  VERSION_MANAGEMENT.md  WASM_GPU_IMPLEMENTATION_STATUS.md  add-crate-metadata.sh  build-release.sh  build.sh  check_versions.sh  debug_constrained.rs  netlify.toml  package-lock.json  release.sh  run_all_tests.sh  rust-toolchain.toml  (+1 more)
amari-automata/: CONTEXT.md  Cargo.toml  README.md
amari-automata/examples/: gpu_cellular_automata.rs
amari-automata/src/: cayley_navigation.rs  comprehensive_tests_simple.rs  error.rs  geometric_ca.rs  gpu.rs  inverse_design.rs  lib.rs  self_assembly.rs  traits.rs  tropical_solver.rs  ui_assembly.rs  verified_contracts_simple.rs
amari-automata/tests/: cayley_navigation.rs  geometric_ca.rs  gpu_integration.rs  integration.rs  inverse_design.rs  self_assembly.rs  self_assembly.rs.disabled  ui_assembly.rs
amari-calculus/: Cargo.toml  README.md
amari-calculus/benches/: calculus_benchmarks.rs
amari-calculus/src/: derivative.rs  error.rs  integration.rs  lib.rs  lie.rs
amari-core/: Cargo.toml  README.md
amari-core/benches/: performance_suite.rs
amari-core/examples/: basic.rs
amari-core/src/: aligned_alloc.rs  basis.rs  cayley.rs  comprehensive_tests.rs  error.rs  lib.rs  precision.rs  property_tests.rs  rotor.rs  simd.rs  unicode_ops.rs  verified.rs  verified_contracts.rs  verified_laws.rs
amari-core/tests/: audit_tests.rs  geometric_product.rs  gf2_tests.rs  products.rs  rotors.rs
amari-dual/: Cargo.toml  README.md
amari-dual/benches/: dual_benchmarks.rs
amari-dual/examples/: gpu_neural_training.rs
amari-dual/src/: comprehensive_tests.rs  error.rs  functions.rs  gpu.rs  lib.rs  multivector.rs  types.rs  verified.rs  verified_contracts.rs
amari-dual/tests/: dual.rs  gpu_integration.rs
amari-dynamics/: Cargo.toml  README.md
amari-dynamics/examples/: bifurcation_diagram.rs  lorenz_attractor.rs  phase_portrait.rs  stability_analysis.rs
amari-dynamics/src/: error.rs  lib.rs  phantom.rs
amari-dynamics/tests/: integration.rs
amari-enumerative/: Cargo.toml  README.md
amari-enumerative/examples/: gpu_enumerative_geometry.rs
amari-enumerative/src/: comprehensive_tests.rs  csm.rs  finite_field.rs  geometric_algebra.rs  gromov_witten.rs  higher_genus.rs  intersection.rs  kazhdan_lusztig.rs  lib.rs  littlewood_richardson.rs  localization.rs  matroid.rs  moduli_space.rs  namespace.rs  operad.rs  performance.rs  phantom.rs  representability.rs  schubert.rs  stability.rs  tropical_curves.rs  tropical_schubert.rs  verified_contracts.rs  wdvv.rs  weight_enumerator.rs
amari-enumerative/tests/: classical_problems.rs  finite_field_tests.rs  gpu_integration.rs  gromov_witten_test.rs  higher_genus_test.rs  intersection_test.rs  kazhdan_lusztig_tests.rs  performance_test.rs  representability_tests.rs  schubert_integration.rs  schubert_test.rs  tropical_test.rs  weight_enumerator_tests.rs
amari-flynn/: Cargo.toml  README.md
amari-flynn-macros/: Cargo.toml  README.md
amari-flynn-macros/src/: lib.rs
amari-flynn/src/: contracts.rs  distributions.rs  lib.rs  prob.rs
amari-flynn/tests/: macro_tests.rs  smt_tests.rs
amari-functional/: Cargo.toml  README.md
amari-functional/benches/: functional_benchmarks.rs
amari-functional/src/: error.rs  lib.rs  phantom.rs
amari-fusion/: Cargo.toml  README.md
amari-fusion/benches/: comparison.rs
amari-fusion/examples/: gpu_llm_evaluation.rs
amari-fusion/src/: attention.rs  comprehensive_tests.rs  evaluation.rs  gpu.rs  lib.rs  optimizer.rs  types.rs  verified.rs  verified_contracts.rs
amari-gpu/: Cargo.toml  README.md
amari-gpu/src/: adaptive.rs  automata.rs  benchmarks.rs  calculus.rs  dual.rs  enumerative.rs  functional.rs  fusion.rs  gf2.rs  holographic.rs  lib.rs  measure.rs  multi_gpu.rs  network.rs  performance.rs  probabilistic.rs  relativistic.rs  shaders.rs  timeline.rs  topology.rs  tropical.rs  unified.rs  verification.rs
amari-gpu/tests/: integration_tests.rs  performance_tests.rs  verification_integration.rs  webgpu_info_geom.rs
amari-holographic/: Cargo.toml  README.md
amari-holographic/src/: lib.rs
amari-info-geom/: Cargo.toml  README.md
amari-info-geom/examples/: gpu_information_geometry.rs
amari-info-geom/src/: comprehensive_tests.rs  gpu.rs  lib.rs  verified_contracts.rs
amari-info-geom/tests/: gpu_integration.rs  info_geom.rs
amari-measure/: AMARI_MEASURE_CONTEXT.md  Cargo.toml  README.md
amari-measure/benches/: integration_benchmarks.rs
amari-measure/examples/: basic_measures.rs  convergence_theorems.rs  geometric_measures.rs  integration_example.rs  product_measures.rs
amari-measure/src/: convergence.rs  density.rs  error.rs  fisher_measure.rs  geometric_measure.rs  integration.rs  lib.rs  measure.rs  multivector_measure.rs  numerical_integration.rs  parametric.rs  phantom.rs  product.rs  pushforward.rs  radon_nikodym_dual.rs  sigma_algebra.rs  signed_measure.rs  tropical_measure.rs  type_safe_convergence.rs
amari-network/: Cargo.toml  MATHEMATICAL_FOUNDATIONS.md  README.md
amari-network/examples/: basic_network.rs  community_detection.rs  geometric_analysis.rs  information_diffusion.rs  tropical_pathfinding.rs
amari-network/src/: error.rs  lib.rs  (+3 more)
amari-optimization/: Cargo.toml  README.md
amari-probabilistic/: Cargo.toml  README.md
amari-relativistic/: Cargo.toml  README.md
amari-topology/: Cargo.toml  README.md
amari-tropical/: Cargo.toml  README.md
amari-wasm/: .npmignore  Cargo.toml  README.md  package.json
(+438 files in other folders)
