[package]
name = "amari"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Advanced mathematical computing library with geometric algebra, tropical algebra, and automatic differentiation"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["mathematics", "geometric-algebra", "tropical-algebra", "autodiff", "wasm"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true, features = ["std", "phantom-types", "high-precision"] }
amari-tropical = { workspace = true }
amari-dual = { workspace = true }
amari-fusion = { workspace = true }
amari-info-geom = { workspace = true }
amari-automata = { workspace = true }
amari-enumerative = { workspace = true }
amari-relativistic = { workspace = true }
amari-gpu = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
approx.workspace = true
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
gpu = ["dep:amari-gpu"]

[[test]]
name = "integration"
path = "tests/integration.rs"

[workspace]
members = ["amari-core", "amari-wasm", "amari-gpu", "amari-info-geom", "amari-tropical", "amari-dual", "amari-fusion", "amari-automata", "amari-enumerative", "amari-relativistic", "amari-network"]
resolver = "2"

[workspace.package]
version = "0.9.1"
authors = ["Amari Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Amari crates (internal dependencies)
amari = { path = ".", version = "0.9.1" }
amari-core = { path = "amari-core", version = "0.9.1", default-features = false }
amari-tropical = { path = "amari-tropical", version = "0.9.1" }
amari-dual = { path = "amari-dual", version = "0.9.1" }
amari-fusion = { path = "amari-fusion", version = "0.9.1" }
amari-info-geom = { path = "amari-info-geom", version = "0.9.1" }
amari-automata = { path = "amari-automata", version = "0.9.1" }
amari-enumerative = { path = "amari-enumerative", version = "0.9.1" }
amari-relativistic = { path = "amari-relativistic", version = "0.9.1" }
amari-gpu = { path = "amari-gpu", version = "0.9.1" }
amari-network = { path = "amari-network", version = "0.9.1" }

# External dependencies
bytemuck = "1.14"
rayon = "1.8"
thiserror = "1.0"
num-traits = "0.2"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.32"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"