[package]
name = "amari"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Advanced mathematical computing library with geometric algebra, tropical algebra, and automatic differentiation"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["mathematics", "geometric-algebra", "tropical-algebra", "autodiff", "wasm"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true, features = ["std", "phantom-types", "high-precision"] }
amari-tropical = { workspace = true }
amari-dual = { workspace = true }
amari-network = { workspace = true }
amari-fusion = { workspace = true }
amari-info-geom = { workspace = true }
amari-automata = { workspace = true }
amari-enumerative = { workspace = true }
amari-relativistic = { workspace = true }
amari-gpu = { workspace = true, optional = true }
amari-optimization = { workspace = true, optional = true }
amari-flynn = { workspace = true, optional = true }
amari-measure = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
approx.workspace = true
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
gpu = ["dep:amari-gpu"]
optimization = ["dep:amari-optimization"]
flynn = ["dep:amari-flynn"]
measure = ["dep:amari-measure"]
# Deterministic mode for networked physics (~10-20% slower but bit-exact)
deterministic = []

[[test]]
name = "integration"
path = "tests/integration.rs"

[[example]]
name = "networked_physics"
path = "examples/networked_physics.rs"
required-features = ["deterministic"]

[workspace]
members = ["amari-core", "amari-wasm", "amari-gpu", "amari-info-geom", "amari-tropical", "amari-dual", "amari-fusion", "amari-automata", "amari-enumerative", "amari-relativistic", "amari-network", "amari-optimization", "amari-flynn", "amari-flynn-macros", "amari-measure", "amari-calculus"]
resolver = "2"

[workspace.package]
version = "0.12.2"
authors = ["Amari Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Amari crates (internal dependencies)
amari = { path = ".", version = "0.12.2" }
amari-core = { path = "amari-core", version = "0.12.2" }
amari-tropical = { path = "amari-tropical", version = "0.12.2" }
amari-dual = { path = "amari-dual", version = "0.12.2" }
amari-fusion = { path = "amari-fusion", version = "0.12.2" }
amari-info-geom = { path = "amari-info-geom", version = "0.12.2" }
amari-automata = { path = "amari-automata", version = "0.12.2" }
amari-enumerative = { path = "amari-enumerative", version = "0.12.2" }
amari-relativistic = { path = "amari-relativistic", version = "0.12.2" }
amari-gpu = { path = "amari-gpu", version = "0.12.2" }
amari-network = { path = "amari-network", version = "0.12.2" }
amari-optimization = { path = "amari-optimization", version = "0.12.2" }
amari-flynn = { path = "amari-flynn", version = "0.12.2" }
amari-flynn-macros = { path = "amari-flynn-macros", version = "0.12.2" }
amari-measure = { path = "amari-measure", version = "0.12.2" }
amari-calculus = { path = "amari-calculus", version = "0.12.2" }
amari-wasm = { path = "amari-wasm", version = "0.12.2" }

# External dependencies
bytemuck = "1.14"
rayon = "1.8"
thiserror = "1.0"
num-traits = "0.2"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
