[package]
name = "amari-automata"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Cellular automata, inverse design, and self-assembly using geometric algebra"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["cellular-automata", "inverse-design", "self-assembly", "geometric-algebra", "mathematics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
amari-dual = { workspace = true }
amari-tropical = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde-support = ["serde"]

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"

