[package]
name = "amari-calculus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Justin Elliott Cobb <justin@industrialalgebra.com>"]
repository = "https://github.com/justinelliottcobb/Amari"
description = "Geometric calculus - unified differential and integral calculus using geometric algebra"
keywords = ["geometric-algebra", "calculus", "diff-geometry", "vector-calculus", "clifford-algebra"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
amari-measure = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"

[features]
default = ["std"]
std = ["amari-core/std", "amari-measure/std"]

[[bench]]
name = "calculus_benchmarks"
harness = false
