[package]
name = "amari-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core geometric algebra and mathematical structures"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["geometric-algebra", "clifford-algebra", "mathematics", "linear-algebra", "multivector"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
num-traits = { workspace = true }
approx = { workspace = true }
rayon = { workspace = true, optional = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
rug = { version = "1.24", optional = true }
dashu-float = { version = "0.4.3", optional = true, default-features = false }

# Formal verification (requires nightly)
creusot-contracts = { version = "0.6", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[features]
default = ["std", "phantom-types", "high-precision"]
std = []
serialize = ["serde"]
parallel = ["rayon"]
# Phantom types for compile-time verification (works on stable)
phantom-types = []
# High-precision arithmetic (pure Rust, WASM-compatible)
high-precision = ["dep:dashu-float", "dashu-float/std"]
# WASM-compatible high-precision (alias for high-precision)
wasm-precision = ["high-precision"]
# Native high-precision (rug backend, maximum performance, native-only)
native-precision = ["dep:rug"]
# Maximum precision (includes both backends for auto-selection)
full-precision = ["high-precision", "native-precision"]
# Formal verification with Creusot (requires nightly)
formal-verification = ["creusot-contracts", "phantom-types"]

[[bench]]
name = "performance_suite"
harness = false