[package]
name = "amari-dual"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Dual number automatic differentiation"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["automatic-differentiation", "dual-numbers", "calculus", "mathematics", "derivatives"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { path = "../amari-core", version = "0.8.2" }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"

[features]
default = ["std", "high-precision"]
std = []
serialize = ["serde"]
high-precision = ["amari-core/high-precision"]