[package]
name = "amari-dual"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Dual number automatic differentiation"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["autodiff", "dual-numbers", "calculus", "mathematics", "derivatives"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

# GPU acceleration dependencies
bytemuck = { version = "1.14", features = ["derive"], optional = true }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"

[[bench]]
name = "dual_benchmarks"
harness = false

[features]
default = ["std", "high-precision"]
std = []
serialize = ["serde"]
high-precision = ["amari-core/high-precision"]
native-precision = ["amari-core/native-precision"]
wasm-precision = ["amari-core/wasm-precision"]
phantom-types = ["amari-core/phantom-types"]
contracts = []
gpu = ["bytemuck", "wgpu", "pollster", "futures", "tokio"]