[package]
name = "amari-enumerative"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Enumerative geometry capabilities for the Amari library"
repository = "https://github.com/justinelliottcobb/Amari"
keywords = ["mathematics", "geometry", "enumerative", "intersection", "schubert"]
categories = ["mathematics", "science"]

[dependencies]
amari-core = { path = "../amari-core", version = "0.4" }
amari-tropical = { path = "../amari-tropical", version = "0.4" }
num-rational = "0.4"
num-bigint = "0.4"
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
# Performance optimization dependencies
wgpu = { version = "0.19", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
rayon = { version = "1.8", optional = true }
once_cell = "1.19"

[features]
default = []
serde = ["dep:serde", "num-rational/serde", "num-bigint/serde"]
wgpu = ["dep:wgpu"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
parallel = ["dep:rayon"]
performance = ["parallel"]
wasm-full = ["wasm", "wgpu", "performance"]

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"