[package]
name = "amari-flynn-macros"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Justin Elliott Cobb <justin@industrialalgebra.com>"]
repository = "https://github.com/justinelliottcobb/Amari"
description = "Procedural macros for amari-flynn probabilistic contracts"
keywords = ["probability", "macros", "contracts"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
