[package]
name = "amari-functional"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Functional analysis on multivector spaces - Hilbert spaces, linear operators, and spectral theory"
repository = "https://github.com/justinelliottcobb/Amari"
keywords = ["functional-analysis", "hilbert-space", "spectral-theory", "operators", "geometric-algebra"]
categories = ["mathematics", "science"]

[dependencies]
amari-core = { workspace = true, features = ["std", "phantom-types"] }
amari-measure = { workspace = true }
amari-calculus = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }

[features]
default = ["std"]
std = []
parallel = []
formal-verification = []
