[package]
name = "amari-fusion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Fusion system for combining algebraic structures"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["fusion-system", "algebraic-structures", "mathematics", "composition", "category-theory"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
amari-dual = { workspace = true }
amari-tropical = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
fastrand = "2.0"

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"
fastrand = "2.0"

[features]
default = ["std", "high-precision"]
std = []
serialize = ["serde"]
high-precision = ["amari-core/high-precision", "amari-dual/high-precision", "amari-tropical/high-precision"]

[[bench]]
name = "comparison"
harness = false