[package]
name = "amari-fusion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Fusion system for combining algebraic structures"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["fusion-system", "algebraic-structures", "mathematics", "composition", "category-theory"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
amari-dual = { workspace = true }
amari-tropical = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
fastrand = "2.0"
rayon = { version = "1.10", optional = true }

# GPU acceleration dependencies
bytemuck = { version = "1.14", features = ["derive"], optional = true }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"
fastrand = "2.0"

[features]
default = ["std", "high-precision"]
std = []
serialize = ["serde"]
high-precision = ["amari-core/high-precision", "amari-dual/high-precision", "amari-tropical/high-precision"]
gpu = ["bytemuck", "wgpu", "pollster", "futures", "tokio", "amari-dual/gpu", "amari-tropical/gpu"]
holographic = ["rayon"]
full = ["holographic", "serialize", "gpu", "high-precision"]

[[bench]]
name = "comparison"
harness = false