[package]
name = "amari-gpu"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU acceleration for mathematical computations"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["gpu-computing", "webgpu", "parallel", "performance", "mathematics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
# Default to no high-precision for GPU (and WASM compatibility)
amari-core = { workspace = true, default-features = false, features = ["std", "phantom-types"] }
amari-info-geom = { workspace = true, default-features = false, features = ["std"] }
amari-network = { workspace = true, default-features = false, features = ["std"] }
amari-relativistic = { workspace = true, default-features = false, features = ["std", "phantom-types"] }
amari-measure = { workspace = true, optional = true }
amari-calculus = { workspace = true, optional = true }
amari-tropical = { workspace = true, optional = true }
amari-dual = { workspace = true, optional = true }
amari-fusion = { workspace = true, optional = true }
amari-automata = { workspace = true, optional = true }
amari-enumerative = { workspace = true, optional = true }
num-traits = { workspace = true }
wgpu = "0.19"
futures = "0.3"
pollster = "0.3"
bytemuck = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
nalgebra = { workspace = true }
tokio = { version = "1.0", features = ["sync", "time"] }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["macros", "rt"] }

[features]
default = []
std = ["amari-core/std", "amari-relativistic/std", "amari-info-geom/std"]
webgpu = ["wgpu/webgpu"]
high-precision = ["amari-core/high-precision", "amari-relativistic/high-precision"]
measure = ["dep:amari-measure"]
calculus = ["dep:amari-calculus"]
tropical = ["dep:amari-tropical"]
dual = ["dep:amari-dual"]
fusion = ["dep:amari-fusion"]
automata = ["dep:amari-automata"]
enumerative = ["dep:amari-enumerative"]